--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind screens;
 
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
@@ -12,14 +13,15 @@
   width: 100vw;
   min-height: 100vh;
   position: fixed;
-  display: flex;
-  justify-content: center;
-  padding: 120px 24px 160px 24px;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* padding: 120px 24px 160px 24px; */
   pointer-events: none;
+  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #949090 100%);
 }
 
-.main:before {
-  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
+/* .main:before {
+  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #949090 100%);
   position: absolute;
   content: "";
   z-index: 2;
@@ -38,6 +40,18 @@
   top: 0;
   opacity: 0.4;
   filter: invert(1);
+} */
+
+.prompt_card {
+  -webkit-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+  -moz-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+  box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+}
+
+.event {
+  -webkit-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+  -moz-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+  box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
 }
 
 .gradient {
@@ -65,6 +79,17 @@
   opacity: 0.15;
 }
 
+.nav {
+  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #949090 100%);
+  -webkit-box-shadow: -2px 32px 24px -3px rgba(22, 12, 17, 0.34);
+  -moz-box-shadow: -2px 32px 24px -3px rgba(22, 12, 17, 0.34);
+  box-shadow: -2px 32px 24px -3px rgba(22, 12, 17, 0.34);
+}
+
+img {
+  height: revert-layer;
+}
+
 @media screen and (max-width: 640px) {
   .main {
     padding: 0;
@@ -74,7 +99,7 @@
 /* Tailwind Styles */
 
 .app {
-  @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
+  @apply relative z-10 min-h-screen max-w-7xl mx-auto sm:px-16 px-6;
 }
 
 .black_btn {
@@ -86,7 +111,7 @@
 }
 
 .head_text {
-  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+  @apply mt-5 text-3xl font-extrabold leading-[1.15] text-black sm:text-6xl;
 }
 
 .orange_gradient {
@@ -102,11 +127,11 @@
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-gray-600 sm:text-xl;
 }
 
 .search_input {
-  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+  @apply block w-full sm:w-3/5 rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
 }
 
 .copy_btn {
@@ -118,12 +143,12 @@
 }
 
 .prompt_layout {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply py-8 sm:columns-2 gap-9 xl:columns-3;
 }
 
 /* Feed Component */
 .feed {
-  @apply mt-16 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
+  @apply mt-16 mx-auto w-full;
 }
 
 /* Form Component */
@@ -150,7 +175,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply break-inside-avoid rounded-lg sm:max-w-[350px] border border-gray-300 bg-white/20 bg-clip-padding p-3 backdrop-blur-lg backdrop-filter md:max-w-[300px] w-full h-fit;
 }
 
 .flex-center {
