--- a/app/global.css
+++ b/app/global.css
@@ -1,9 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind screens;
+@import "tailwindcss";
+@import "@heroui/styles"; 
+
+
+@utility font-inter {
+  font-family: "Inter", sans-serif;
+}
+
+@utility font-satoshi {
+  font-family: "Satoshi", sans-serif;
+}
 
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
@@ -13,45 +20,20 @@
   width: 100vw;
   min-height: 100vh;
   position: fixed;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* padding: 120px 24px 160px 24px; */
   pointer-events: none;
   background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #949090 100%);
 }
 
-/* .main:before {
-  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #949090 100%);
-  position: absolute;
-  content: "";
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  top: 0;
-}
-
-.main:after {
-  content: "";
-  background-image: url("/assets/images/grid.svg");
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  opacity: 0.4;
-  filter: invert(1);
-} */
-
 .prompt_card {
   -webkit-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
   -moz-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
-  box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+  box-shadow: 0px 0px 15px 0px rgba(169, 50, 171, 0.88);
 }
 
 .event {
   -webkit-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
   -moz-box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
-  box-shadow: 0px 0px 15px 6px rgba(169, 50, 171, 0.88);
+  box-shadow: 0px 0px 15px 0px rgba(169, 50, 171, 0.88);
 }
 
 .gradient {
@@ -59,11 +41,8 @@
   z-index: 3;
   width: 100%;
   max-width: 640px;
-  background-image: radial-gradient(
-      at 27% 37%,
-      hsla(215, 98%, 61%, 1) 0px,
-      transparent 0%
-    ),
+  background-image:
+    radial-gradient(at 27% 37%, hsla(215, 98%, 61%, 1) 0px, transparent 0%),
     radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
     radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
     radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
@@ -80,10 +59,10 @@
 }
 
 .nav {
-  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #949090 100%);
+  background-color: #a6a6a6;
   -webkit-box-shadow: -2px 32px 24px -3px rgba(22, 12, 17, 0.34);
   -moz-box-shadow: -2px 32px 24px -3px rgba(22, 12, 17, 0.34);
-  box-shadow: -2px 32px 24px -3px rgba(22, 12, 17, 0.34);
+  box-shadow: -2px 20px 24px -3px rgba(22, 12, 17, 0.34);
 }
 
 img {
@@ -115,15 +94,15 @@ img {
 }
 
 .orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+  @apply bg-linear-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
 }
 
 .green_gradient {
-  @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
+  @apply bg-linear-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
 }
 
 .blue_gradient {
-  @apply bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
+  @apply bg-linear-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
 }
 
 .desc {
@@ -131,7 +110,7 @@ img {
 }
 
 .search_input {
-  @apply block w-full sm:w-3/5 rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+  @apply block w-full sm:w-3/5 rounded-md text-black hover:border-gray-500 border-gray-400 border-2 outline-0 py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:outline-none focus:ring-0;
 }
 
 .copy_btn {
@@ -153,11 +132,11 @@ img {
 
 /* Form Component */
 .form_textarea {
-  @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-500 outline-0;
+  @apply w-full flex rounded-lg h-50 mt-2 p-3 text-sm text-black  hover:border-gray-500 border-gray-400 border-2 outline-0;
 }
 
 .form_input {
-  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
+  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-black hover:border-gray-500 border-gray-400 border-2  outline-0;
 }
 
 /* Nav Component */
@@ -166,7 +145,7 @@ img {
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
+  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-52.5 flex flex-col gap-2 justify-end items-end;
 }
 
 .dropdown_link {
@@ -175,7 +154,7 @@ img {
 
 /* PromptCard Component */
 .prompt_card {
-  @apply break-inside-avoid rounded-lg sm:max-w-[350px] border border-gray-300 bg-white/20 bg-clip-padding p-3 backdrop-blur-lg backdrop-filter md:max-w-[300px] w-full h-fit;
+  @apply break-inside-avoid rounded-lg sm:max-w-87.5 border border-gray-300 bg-white/20 bg-clip-padding p-3 backdrop-blur-lg backdrop-filter md:max-w-[300px] w-full h-fit;
 }
 
 .flex-center {
